调整配置及增加部分页面

--- a/docs/node/安装验证淘宝镜像.md
+++ b/docs/node/安装验证淘宝镜像.md
@@ -1,17 +1,21 @@
+---
+title: 安装验证淘宝镜像
+---
+
 ### 将官方源换成国内源
 
-```git
+```sh
 npm config set registry http://registry.npmmirror.com
 ```
 
 ### 验证是否成功
 
-```git
+```sh
 npm config get registry
 ```
 
 ### 换回官方源
 
-```git
+```sh
 npm config set registry https://registry.npmjs.org
 ```
