修改gitalk评论--引入全局组件

--- a/docs/other/项目相关.md
+++ b/docs/other/项目相关.md
@@ -30,3 +30,6 @@ npm version xxx
 | MAJOR: 1 | MAJOR（主版本号）：当你做了不兼容的 API 修改时递增|
 | MINOR: 0 | MINOR（次版本号）：当你添加了向下兼容的功能时递增|
 | MAJOR: 2 | PATCH（补丁版本号）：当你做了向下兼容的问题修正时递增|
+
+
+<git-talk/>
