--- a/docs/note/2024-05-21.md
+++ b/docs/note/2024-05-21.md
@@ -6,3 +6,6 @@ title: 2024-5.21
     <p style="color: #FFF886">正在期待下班ing~ 😎</p>
     <img src="./images/qidai.jpg" alt="期待">
 </div>
+
+
+<git-talk/>
