增加项目相关内容

--- a/docs/other/项目相关.md
+++ b/docs/other/项目相关.md
@@ -32,4 +32,13 @@ npm version xxx
 | MAJOR: 2 | PATCH（补丁版本号）：当你做了向下兼容的问题修正时递增|
 
 
+## 临时关闭 ESLint 规则
+在文件上方加上
+```jsx
+/* eslint-disable react/prop-types */
+```
+
+> 不推荐 ❌️  
+> 只是自己写demo的时候快速解决eslint报错问题
+
 <git-talk/>
