--- a/docs/other/项目相关.md
+++ b/docs/other/项目相关.md
@@ -40,3 +40,32 @@ npm version xxx
 
 > 不推荐 ❌️  
 > 只是自己写demo的时候快速解决eslint报错问题
+
+## 配置src别名@
+```js
+import { defineConfig } from 'vite'
+import react from '@vitejs/plugin-react'
+
+export default defineConfig({
+  plugins: [react()],
+  resolve: {
+    alias: {
+      '@': '/src',
+    },
+  },
+})
+
+```
+```js
+// jsconfig.json   使编辑器能够解析Vite别名配置
+{
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    }
+  },
+  "include": ["src"]
+}
+
+```
