--- a/docs/other/项目相关.md
+++ b/docs/other/项目相关.md
@@ -43,6 +43,7 @@ npm version xxx
 
 ## 配置src别名@
 ```js
+// vite.config.js
 import { defineConfig } from 'vite'
 import react from '@vitejs/plugin-react'
 
