Mock服务 json-server的使用

--- a/docs/other/项目相关.md
+++ b/docs/other/项目相关.md
@@ -70,3 +70,30 @@ export default defineConfig({
 }
 
 ```
+
+## Mock服务 json-server的使用
+### 项目结构
+```md
+my-app/
+├─ server/
+│  ├─ data.json
+├─ package.json
+
+```
+### 安装插件
+```shell
+pnpm i json-server -D
+```
+### 配置脚本
+```json
+"scripts": {
+    "serve": "json-server ./server/data.json --port 8888"
+  },
+```
+### 启动
+```shell
+pnpm serve
+```
+### 成功
+![img.png](images/mock-success.png)
+> --port 8888 指定端口号 , 不需要指定可以不写
