--- a/docs/other/项目相关.md
+++ b/docs/other/项目相关.md
@@ -97,3 +97,9 @@ pnpm serve
 ### 成功
 ![img.png](images/mock-success.png)
 > --port 8888 指定端口号 , 不需要指定可以不写
+
+## 清楚git缓存重新输入用户名密码
+```shell
+git config --global credential.helper wincred
+```
+再执行 push 即可
