--- a/docs/other/项目相关.md
+++ b/docs/other/项目相关.md
@@ -103,3 +103,38 @@ pnpm serve
 git config --global credential.helper wincred
 ```
 再执行 push 即可
+
+## 搜索框折叠展开
+**效果**
+
+![img.png](images/zhankai.png)
+![img.png](images/zhedie.png)
+
+**实现**
+
+> 定义一个foldState属性 控制展开.折叠的状态, 通过该状态控制高度实现
+
+
+```html
+   <el-button v-if="foldState" type="text" @click="handleFold(false)">展开</el-button>
+   <el-button v-else type="text" @click="handleFold(true)">折叠</el-button>
+```
+
+```html
+    <el-header class="content-header" :style="headerStyle">
+    </el-header>
+```
+```js
+computed: {
+  headerStyle() {
+    return {
+      height: this.foldState ? '30px' : '80px'
+    }
+  }
+},
+methods:{
+  handleFold(state) {
+    this.foldState = state
+  }
+}
+```
