--- a/docs/other/常用插件包.md
+++ b/docs/other/常用插件包.md
@@ -10,3 +10,8 @@ pnpm install normalize.css
 > 在需要的地方引入即可
 
 > ``` import 'normalize.css' ```
+
+### 富文本编辑器
+```shell
+pnpm i react-quill@2.0.0-beta.2
+```
