--- a/docs/other/常用插件包.md
+++ b/docs/other/常用插件包.md
@@ -1,17 +1,18 @@
 ---
-title: prettier格式化
+title: 常用插件包
 ---
 
-## 样式
-### 初始化样式
-```shell
-pnpm install normalize.css
-```
-> 在需要的地方引入即可
 
-> ``` import 'normalize.css' ```
-
-### 富文本编辑器
-```shell
-pnpm i react-quill@2.0.0-beta.2
-```
+| 插件               | 插件用途                        |
+|------------------|-----------------------------|
+| react-redux | Redux状态管理                   |
+| @reduxjs/toolkit | Redux状态管理--简化 Redux 应用开发的工具 |
+| react-router-dom| 路由                          |
+| classnames| class类名处理                   |
+| axios| 请求插件                        |
+| antd-mobile| ant design移动端组件库            |
+| json-server| mock服务                      |
+| react-quill@2.0.0-beta.2| 富文本编辑器              |
+| normalize.css| 初始化样式             |
+|  @types/node| node的三方包             |
+|  lodash| js工具库            |
