--- a/docs/other/项目相关.md
+++ b/docs/other/项目相关.md
@@ -44,14 +44,16 @@ npm version xxx
 ## 配置src别名@
 ```js
 // vite.config.js
+// pnpm i @types/node    --node三方包
 import { defineConfig } from 'vite'
 import react from '@vitejs/plugin-react'
+import path from 'path'
 
 export default defineConfig({
   plugins: [react()],
   resolve: {
     alias: {
-      '@': '/src',
+     '@': path.resolve(__dirname, './src'),
     },
   },
 })
